--- a/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.html
+++ b/projects/mona-ui/src/lib/inputs/modules/slider/components/slider/slider.component.html
@@ -17,7 +17,8 @@
         </ng-container>
     </div>
     <div class="mona-slider-tick-label-list"
-         [ngClass]="{'mona-slider-position-before': labelPosition==='before', 'mona-slider-position-after': labelPosition==='after'}">
+         [ngClass]="{'mona-slider-position-before': labelPosition==='before', 'mona-slider-position-after': labelPosition==='after'}"
+         *ngIf="showLabels">
         <ng-container *ngFor="let tick of ticks; let tx = index;">
             <span class="mona-slider-tick-label">
                 <span *ngIf="!tickValueTemplate">{{tick.value}}</span>
