--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -721,6 +721,9 @@ input[type="checkbox"][monaCheckBox] {
     }
 }
 
+/** Color Gradient */
+
+
 /** Color Palette */
 .mona-color-palette {
     & > div.mona-color-cell {
