More work on color gradient

--- a/projects/mona-ui/src/lib/inputs/modules/color-gradient/components/color-gradient/color-gradient.component.html
+++ b/projects/mona-ui/src/lib/inputs/modules/color-gradient/components/color-gradient/color-gradient.component.html
@@ -11,6 +11,53 @@
         <mona-hue-slider [ngModel]="hsv().h()" (ngModelChange)="hueValue$.next($event)"></mona-hue-slider>
     </div>
     <div class="mona-color-gradient-data-area">
-        <div [style.background-color]="selectedColor()" style="width: 20px; height: 20px; display: flex;"></div>
+        <div class="mona-color-gradient-preview" [style.background-color]="selectedColor()"></div>
+        <div class="mona-color-gradient-values">
+            <div class="mona-color-gradient-inputs">
+                <div>
+                    <div>
+                        <span>H: </span>
+                        <mona-numeric-text-box [ngModel]="hsv().h()" [min]="0" [max]="360" [decimals]="0" [spinners]="false"
+                                               (ngModelChange)="onHsvChange($event, 'h')"></mona-numeric-text-box>
+                    </div>
+                    <div>
+                        <span>S: </span>
+                        <mona-numeric-text-box [ngModel]="hsv().s()" [min]="0" [max]="100" [decimals]="0" [spinners]="false"
+                                               (ngModelChange)="onHsvChange($event, 's')"></mona-numeric-text-box>
+                    </div>
+                    <div>
+                        <span>V: </span>
+                        <mona-numeric-text-box [ngModel]="hsv().v()" [min]="0" [max]="100" [decimals]="0" [spinners]="false"
+                                               (ngModelChange)="onHsvChange($event, 'v')"></mona-numeric-text-box>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <span>R: </span>
+                        <mona-numeric-text-box [ngModel]="rgb().r()" [min]="0" [max]="255" [decimals]="0" [spinners]="false"
+                                               (ngModelChange)="onRgbChange($event, 'r')"></mona-numeric-text-box>
+                    </div>
+                    <div>
+                        <span>G: </span>
+                        <mona-numeric-text-box [ngModel]="rgb().g()" [min]="0" [max]="255" [decimals]="0" [spinners]="false"
+                                               (ngModelChange)="onRgbChange($event, 'g')"></mona-numeric-text-box>
+                    </div>
+                    <div>
+                        <span>B: </span>
+                        <mona-numeric-text-box [ngModel]="rgb().b()" [min]="0" [max]="255" [decimals]="0" [spinners]="false"
+                                               (ngModelChange)="onRgbChange($event, 'b')"></mona-numeric-text-box>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mona-color-gradient-hex-value">
+            <mona-text-box [ngModel]="hex()" (ngModelChange)="onHexChange($event)" (inputBlur)="onHexInputBlur()" (inputFocus)="onHexInputFocus()">
+                <ng-template monaTextBoxSuffixTemplate>
+                    <button monaButton [flat]="true">
+                        <fa-icon [icon]="copyIcon"></fa-icon>
+                    </button>
+                </ng-template>
+            </mona-text-box>
+        </div>
     </div>
 </div>
