--- a/projects/mona-ui/src/lib/inputs/modules/color-gradient/components/hue-slider/hue-slider.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/color-gradient/components/hue-slider/hue-slider.component.scss
@@ -1,17 +1,17 @@
 div.mona-hue-slider {
     position: relative;
-    width: 20px;
-    height: 160px;
+    width: 12px;
+    height: 100%;
     border: 1px solid var(--mona-border-color);
     background: linear-gradient(to top, #ff0000, #ffff00, #00ff00, #00ffff, #0000ff, #ff00ff, #ff0000);
 }
 
 div.mona-hue-slider-handle {
-    height: 10px;
-    border: 2px solid white;
-    margin-top: -5px;
+    height: 14px;
+    box-shadow: 0 0 0 2px white inset, 0 0 0 1px var(--mona-border-color), 0 0 0 3px var(--mona-border-color) inset;
+    margin-top: -8px;
     margin-left: -2px;
     position: absolute;
     top: 160px;
-    width: 24px;
+    width: 14px;
 }
