--- a/projects/mona-ui/src/lib/inputs/modules/color-gradient/components/color-gradient/color-gradient.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/color-gradient/components/color-gradient/color-gradient.component.scss
@@ -10,8 +10,8 @@ div.mona-color-gradient-color-area {
 
 div.mona-color-gradient-slider-area {
     display: flex;
-    //margin-right: 8px;
     margin-left: 8px;
+    column-gap: 8px;
 }
 
 div.mona-hsv-rectangle {
