Prevent selection while dragging handles

--- a/projects/mona-ui/src/lib/inputs/modules/color-gradient/components/alpha-slider/alpha-slider.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/color-gradient/components/alpha-slider/alpha-slider.component.scss
@@ -3,6 +3,7 @@ div.mona-alpha-slider {
     width: 12px;
     height: 100%;
     border: 1px solid var(--mona-border-color);
+    user-select: none;
 }
 
 div.mona-alpha-slider-color {
