--- a/projects/mona-ui/src/lib/inputs/modules/color-gradient/components/color-gradient/color-gradient.component.scss
+++ b/projects/mona-ui/src/lib/inputs/modules/color-gradient/components/color-gradient/color-gradient.component.scss
@@ -6,6 +6,7 @@ div.mona-color-gradient-color-area {
     display: flex;
     flex-direction: column;
     margin-right: 8px;
+    user-select: none;
 }
 
 div.mona-color-gradient-slider-area {
