--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -437,7 +437,7 @@
 <!--                                                 style="color: #fafd0f;"></fa-icon>-->
 <!--                                    </ng-template>-->
                                 </mona-slider>
-                                <mona-numeric-text-box [(ngModel)]="sliderValue"></mona-numeric-text-box>
+                                <mona-numeric-text-box [(ngModel)]="sliderValue" [min]="0" [max]="32"></mona-numeric-text-box>
                             </div>
 
                             <div style="display: flex; align-items: center; justify-content: center;">
